--- a/yayatiraghav(2201330100296).ipynb
+++ b/yayatiraghav(2201330100296).ipynb
@@ -8,8 +8,8 @@
    "source": [
     "#Name- Yayati Raghav and Tarun Kumar\n",
     "#Roll No.-2201330100296 and 2201330100269\n",
-    "##Project link:-\n",
-    "##Github link:-\n",
+    "##Project link:-#https://heartdisease-yayatiraghav-tarunkumar.streamlit.app/\n",
+    "##Github link:-#https://github.com/YayatiRaghav/HeartDisease\n",
     "\n",
     "###Problem Statement:- Analysis on a Healthcare dataset related to the Heart Disease to Predict whether there is chances of heart disease or not using Simple Linear Logistic Regression Algorithm.\n",
     "\n"
